// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> color should render a heading with custom color 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qrdpx3-0 cUcVPQ Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="primary.900"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> should render a heading with default props 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qrdpx3-0 hTyaFt Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> size should render a heading with size large 1`] = `
<div>
  <h4
    class="Textweb__Text-sc-1qrdpx3-0 iAZzAb Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h4>
</div>
`;

exports[`<Heading /> size should render a heading with size medium 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qrdpx3-0 hTyaFt Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> size should render a heading with size xlarge 1`] = `
<div>
  <h3
    class="Textweb__Text-sc-1qrdpx3-0 fyAYeP Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h3>
</div>
`;

exports[`<Heading /> size should render a heading with size xxlarge 1`] = `
<div>
  <h2
    class="Textweb__Text-sc-1qrdpx3-0 foknQd Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h2>
</div>
`;

exports[`<Heading /> size should render a heading with size xxxlarge 1`] = `
<div>
  <h1
    class="Textweb__Text-sc-1qrdpx3-0 gymfwu Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h1>
</div>
`;

exports[`<Heading /> weight should render a heading with bold weight 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qrdpx3-0 hTyaFt Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> weight should render a heading with regular weight 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 zryoY"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;
